# Kronos

./: .gitignore  LLM_PROJECT_MEMORY.md  README.md  README_JAKE.md  REPO_MAP.md  install_deps.bat  kronos_app.py  launch_kronos.bat  pyproject.toml  pytest.ini  requirements.txt
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/daily-notes/: 2026-06-24.md  2026-06-26.md  2026-06-28.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-10.md
model/: kronos.py
scanner/: .env.example  README.md  __init__.py  brief.py  config.py  doctor.py  main.py  requirements-scanner.txt  run_research_ops_scheduled.bat  run_scanner.bat  setup_dependencies.bat  tickers.py
scanner/ai/: minimax_adapter.py
scanner/alerts/: telegram.py
scanner/backtest/: backtest_runner.py  metrics.py
scanner/data/: bar_contract.py  cross_check.py  events.py  market_data.py  options_data.py  synthetic_sessions.py
scanner/edge/: __init__.py  audit.py  calibration.py  features.py  outcomes.py  retrieval.py  scoring.py  stats.py  validation.py
scanner/evidence/: __init__.py  store.py
scanner/learning/: adaptive_policy.py  autotuner.py  outcome_reviewer.py  outcome_store.py  replay_runner.py  trial_registry.py
scanner/models/: kronos_adapter.py
scanner/replay/: sample_replay_dataset.json
scanner/reports/: daily_brief.md
scanner/research/: improvement_plan_2026_05_06.md  potter_visual_doctrine.md
scanner/strategy/: empty_space.py  potter_box.py  potter_doctrine.py  risk_reward.py
scanner/tests/: conftest.py  test_adaptive_policy.py  test_brief.py  (+38 more)
tests/: test_kronos_regression.py  test_kronos_sampling_safety.py  test_webui_security.py
webui/: README.md  app.py  requirements.txt  run.py  start.sh
(+30 files in other folders)
